static/css/main.css
* {
	margin: 0;
	padding: 0;
}

/* calendar */
#calendar {
	width: 50%;
	float: left;
}

.wc-header td {
	background: url(/static/img/shader.png) repeat-x;
}

.wc-cal-event:hover {
	cursor: pointer;
}

/* school iframe*/
iframe#school {
	border: none;
	width: 50%;
	height: 100%;
	float: left;
}

